# jar2appimage

./: .gitignore  =7.0.0  AppRun  CLI_UNIFICATION_SUMMARY.md  CLI_UNIFIED_MIGRATION_GUIDE.md  COMPREHENSIVE_TEST_RESULTS.md  CONTRIBUTING.md  CORE_REFACTORING_SUMMARY.md  DEPENDENCY_ANALYSIS_IMPLEMENTATION.md  ENHANCED_SUMMARY.md  FINAL_SUMMARY.md  JAVA_BUNDLER_UNIFIED_DOCUMENTATION.md  JAVA_MODULAR_MIGRATION_GUIDE.md  LICENSE  PARALLEL_PROCESSOR_REFACTORING_SUMMARY.md  PORTABLE_JAVA_GUIDE.md  QUICKSTART.md  README.md  TEST_SUMMARY_AND_RECOMMENDATIONS.md  TODO.md  TOOL_DOWNLOAD_IMPLEMENTATION.md  UNBUNDLING_SUMMARY.md  appimage_validator.py  batch_processor.py  cli_helper.py  config_manager.py  dependency_detector.py  enhanced_cli.py  enhanced_jar2appimage_cli.py  install.sh  jar2appimage_cli.py  java_auto_downloader.py  java_bundler.py  java_cache.py  java_downloader.py  java_handling_analysis.md  java_manager.py  java_ui.py  java_validator.py  parallel_processor.py  (+13 more)
src/jar2appimage/: __init__.py  analyzer.py  cli.py  cli_commands.py  cli_dependency_analysis.py  cli_help.py  cli_parser.py  cli_simple.py  cli_utils.py  core.py  core_backup.py  core_fixed.py  core_refactored.py  dependency_analyzer.py  dependency_graph.py  dependency_resolver.py  jar_analyzer.py  java_bundler.py  java_bundler_unified.py  runtime.py  tools.py
tests/: test_cli.py  test_enhanced_cli.py  test_fuzz.py  test_jar2appimage.py  test_performance.py  test_portable_java_manager.py  test_portable_java_manager_downloads.py  test_portable_java_manager_noninteractive.py  test_security.py  test_tools.py
