[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jar2appimage"
version = "0.1.2"
description = "Convert Java JAR files to portable AppImages"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "jar2appimage contributors"}
]
keywords = ["java", "appimage", "packaging", "linux", "portable"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
]
dependencies = [
    "requests>=2.25.0",
    "click>=8.0.0",
]

[project.scripts]
jar2appimage = "jar2appimage.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/jar2appimage"
Repository = "https://github.com/your-org/jar2appimage"
Documentation = "https://github.com/your-org/jar2appimage#readme"
"Bug Tracker" = "https://github.com/your-org/jar2appimage/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/jar2appimage"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C90", "UP"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]